* fixed listener double invocation caused by JDK 5 bridge methods

Package org.springframework.osgi.context
* refined AbstractOsgiBundleApplicationContext internal resource loader creation so that subclasses can override it
* improved internal namespace service handling
* improved AbstractOsgiBundleApplicationContext handling of ResourceLoader methods
* AbstractOsgiBundleApplicationContext extends AbstractRefreshableConfigApplicationContext (new in Spring 2.5.2)

Package org.springframework.osgi.io
* improved getFile() method when dealing with resources in expanded bundles

Package org.springframework.osgi.service
* added descriptive exception when invoking non-public methods on class proxies (caused by classes with final mehtods)
* added ServiceProxyDestroyedException to indicate the illegal usage of a destroyed proxy
* refined dynamic proxies (unary cardinality) to throw ServiceProxyDestroyedException instead of IllegalStateException
* refined static proxies (multi cardinality) to throw ServiceProxyDestroyedException if used after being destroyed
* introduced ServiceReferenceProxy interface (available through ImportedOsgiServiceProxy) for accessing the native 
  service reference

Package org.springframework.osgi.test
* removed usage of PackageAdmin for resolving bundles

Package org.springframework.osgi.web
* improved namespace detection strategy for OsgiBundleXmlWebApplicationContext
* fixed problem with OsgiBundleXmlWebApplicationContext publishing null namespaces as OSGi properties
* DefaultContextPathStrategy supports SpringSource Application Platform's Web-ContextPath header


Changes in version 1.1.0 M2 (2008-04-29)
-----------------------------------------

General
* Spring 2.5.4+ required
* upgraded to Felix 1.0.4
* refined the web deployer API
* split web functionality into web and web-extender (symbolic name:org.springframework.bundle.osgi.web.extender) bundle
* added integration with Spring MVC