@@ -18,8 +18,6 @@
 
 package org.springframework.osgi.context.support;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.osgi.framework.BundleContext;
 import org.springframework.beans.BeansException;
 import org.springframework.beans.factory.config.BeanPostProcessor;
@@ -36,8 +34,6 @@ public class BundleContextAwareProcessor implements BeanPostProcessor {
 
 	private final BundleContext bundleContext;
 
-	private static final Log logger = LogFactory.getLog(BundleContextAwareProcessor.class);
-
 
 	public BundleContextAwareProcessor(BundleContext aContext) {
 		this.bundleContext = aContext;
@@ -53,5 +49,4 @@ public class BundleContextAwareProcessor implements BeanPostProcessor {
 		}
 		return bean;
 	}
-
 }
